Fixed overflowing table

--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,7 +1,7 @@
 .table_container {
     background-color: #ffffff;
     width: 100%;
-    height: 90%;
+    height: 95%;
     border-radius: 1rem;
   
     &__table {
