--- a/src/components/TableBody.scss
+++ b/src/components/TableBody.scss
@@ -4,7 +4,7 @@
     width: 100%;
 
     & > * {
-      height: 64px;
+      height: 50px;
       padding: 0 10px;
       text-align: left;
       font-weight: normal;
